fix(Grid): ensure visible native scrollbars on Windows and enforce theme color-schemes (#9361)

--- a/resources/scss/src/grid/VerticalScrollbar.scss
+++ b/resources/scss/src/grid/VerticalScrollbar.scss
@@ -12,6 +12,10 @@
     &:hover {
         opacity: 1;
     }
+
+    .neo-grid-scrollbar-content {
+        width: 1px;
+    }
 }
 
 .neo-grid-wrapper:has(.neo-grid-body.neo-is-scrolling) {
