--- a/resources/scss/theme-cyberpunk/grid/Container.scss
+++ b/resources/scss/theme-cyberpunk/grid/Container.scss
@@ -5,4 +5,8 @@
     --grid-container-color                     : var(--cyber-text);
     --grid-container-font-size                 : 13px;
     --grid-container-header-cell-border-bottom : 1px solid var(--cyber-cyan);
+
+    .neo-grid-container {
+        color-scheme: dark;
+    }
 }
