--- a/resources/scss/theme-dark/grid/Container.scss
+++ b/resources/scss/theme-dark/grid/Container.scss
@@ -5,4 +5,8 @@
     --grid-container-color                     : #bbb;
     --grid-container-font-size                 : 13px;
     --grid-container-header-cell-border-bottom : 2px solid #2b2b2b;
+
+    .neo-grid-container {
+        color-scheme: dark;
+    }
 }
